--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 
   <div class="calendar" id="calendar"></div>
 
-  <!-- Mood Popup -->
-  <div class="popup" id="moodPopup">
-    <h2>How are you feeling today?</h2>
-    <div class="mood-options">
-      <div class="mood" data-mood="happy" style="background:#F4A261;"></div>
-      <div class="mood" data-mood="sad" style="background:#264653;"></div>
-      <div class="mood" data-mood="anxious" style="background:#E76F51;"></div>
-      <div class="mood" data-mood="excited" style="background:#2A9D8F;"></div>
-      <div class="mood" data-mood="neutral" style="background:#E9C46A;"></div>
-    </div>
+<!-- Mood Popup -->
+<div class="popup" id="moodPopup">
+  <h2>How are you feeling today?</h2>
+  <div class="mood-options">
+    <div class="mood" data-mood="very_sad" title="Very Sad" style="background:#756AB6;"></div>
+    <div class="mood" data-mood="sad" title="Sad" style="background:#AC87C5;"></div>
+    <div class="mood" data-mood="neutral" title="Neutral" style="background:#D6A4CE;"></div>
+    <div class="mood" data-mood="happy" title="Happy" style="background:#E0AED0;"></div>
+    <div class="mood" data-mood="amazing" title="Amazing" style="background:#FFE5E5;"></div>
   </div>
+</div>
+
 
   <script src="script.js"></script>
 </body>
